--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -1,7 +1,6 @@
 /* body */
 @import url('https://fonts.googleapis.com/css2?family=DotGothic16&family=Zen+Kaku+Gothic+New:wght@500;900&display=swap');.sp-br{display:none;}
 .sp_link{display: none;}
-.sActual_img_sp{display: none;}
 .pSkilbox_sp{display: none;}
 
 /*背景星*/
@@ -691,8 +690,10 @@ a{
 }
 
 .actualTbG{
-    display:flex;
     justify-content: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
     
 
@@ -777,17 +778,36 @@ a{
 
 /*最後に文字  */
 .slast0{
-    background-image: url(../img/catmaru.PNG);
-    background-repeat: no-repeat;
-    background-position: 65% 0;
-    background-size: 500px;
-    margin-top: 150px;
+    position: relative;
+    z-index: 2;
     width: 100%;
     height: 550px;
     line-height: 1.5em;
     padding-left: 15%;
     color: #151f33;
 }
+
+.slast0::after{
+    content: "";
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height:100%;
+    top: 0;
+    left: 0;
+    opacity: 0.6;
+
+    background-image: url(../img/catmaru.PNG);
+    background-repeat: no-repeat;
+    background-position: 65% 0;
+    background-size: 500px;
+}
+
+.slast0>p{
+    position: relative;
+    z-index: 3;
+    color: #151f33;
+  }
 
 .slast1{
     width: 100%;
@@ -801,7 +821,6 @@ a{
 
 
 .sp_link{display: none;}
-.sActual_img_sp{display: none;}
 .pSkilbox_sp{display: none;}
 
 
@@ -1010,6 +1029,8 @@ a{
     }
 
     .sSkilInline {
+        flex-direction: column;
+        margin: 0 0 0 auto;
         width: 90%;
         padding-left: 10%;
     }
@@ -1067,17 +1088,6 @@ a{
     .sActual{
        /* display:none; */
         top: 3486px;
-    }
-
-    .sActual_img {
-        display: none;
-    }
-
-    .sActual_img_sp{
-        display: block;
-        object-fit: cover;
-        box-sizing:border-box;
-        width: 100%;
     }
 
     .sActual1{
